grote update van POC

--- a/bachproef/VanDorpeLukasBP.tex
+++ b/bachproef/VanDorpeLukasBP.tex
@@ -12,6 +12,9 @@
 \usepackage{minted}
 \usepackage{lscape}
 \usepackage{titlesec}
+\usepackage{csvsimple}
+
+
 %For displaying codeblocks :
 
 \usepackage{listings}
@@ -160,6 +163,8 @@
 \begin{acronym}
     \acro{JSON}{JavaScript Object Notation}
     \acro{FAQ}{Frequently Asked Questions}
+    \acro{XLSX}{Excel Spreadsheet}
+    \acro{AI}{Artificial Intelligence}
 \end{acronym}
 
 %---------- Kern ---------------------------------------------------------------
