--- a/bachproef/methodologie.tex
+++ b/bachproef/methodologie.tex
@@ -32,11 +32,10 @@ Om de handelingen en ervaringen van festivalgangers zo goed mogelijk na te boots
 De factoren en omgevingen die veranderen doorheen het experiment:
 
 \begin{itemize}
+    \item Normale omstandigheden
     \item Lichtinval
     \item Donkere omgeving
-    \item Beschadigde QR-code
-    \item Bewegende QR-code
-    \item Deels afgedekte QR-code
+    \item Beschadigde QR-code     
 \end{itemize}
 
 %TODO: verwijzen naar juiste verwerkingsresultaten
