--- a/bachproef/standvanzaken.tex
+++ b/bachproef/standvanzaken.tex
@@ -590,7 +590,7 @@ Als illustratie maken we een QR-code aan op de applicatie die bestemd is voor lo
 \begin{figure}[h]
     \centering
     \includegraphics{F12_requestQrCode.png}
-    \captionsetup{justification=ce/brntering, singlelinecheck=false}    
+    \captionsetup{justification=centering, singlelinecheck=false}
     \caption{Het data object bij de creatie van locker nummer 1 als logistieke medewerker. Deze heeft een tijdspanne van tien minuten.}
     \label{fig:dataobjectQR}
 \end{figure}}
@@ -636,7 +636,7 @@ Voor eenvoud van het illustratief voorbeeld vormen we dit om naar een gestandaar
 \begin{figure}[h]
     \centering
     \includegraphics{F14_formattedJsonData.png}
-    \captionsetup{justification=ce/brntering, singlelinecheck=false}    
+    \captionsetup{justification=centering, singlelinecheck=false}
     \caption{Het JSON object converteren naar een gestandaardiseerde vorm.}
     \label{fig:formattedJsonData}
 \end{figure}
@@ -663,7 +663,7 @@ Als data zijn originele vorm heeft aangehouden, zal de functie geen foutboodscha
 \begin{figure}[h]
     \centering
     \includegraphics{F15_qrcodeVerified.png}
-    \captionsetup{justification=ce/brntering, singlelinecheck=false}    
+    \captionsetup{justification=centering, singlelinecheck=false}
     \caption{De QR-code data dat vanaf de aanmaak tot de verifieer  functie ongewijzigd is gebleven.}
     \label{fig:qrdataVerified}
 \end{figure}
@@ -679,7 +679,7 @@ Om de problematiek van Lockit Rentals over de QR-code herkenning onder de loep t
 \begin{figure}[h]
     \centering
     \includegraphics{F20_ZijkantLocker.jpg}
-    \captionsetup{justification=ce/brntering, singlelinecheck=false}    
+    \captionsetup{justification=centering, singlelinecheck=false}
     \caption{Het vooraanzicht van een QR-unit met camera en digitaal scherm.}
     \label{fig:zijkantLocker}
 \end{figure}
@@ -687,7 +687,7 @@ Om de problematiek van Lockit Rentals over de QR-code herkenning onder de loep t
 \begin{figure}[h]
     \centering
     \includegraphics{F21_LockerUSBCamera.png}
-    \captionsetup{justification=ce/brntering, singlelinecheck=false}    
+    \captionsetup{justification=centering, singlelinecheck=false}
     \caption{De USB camera ingebouwd inclusief verlichting.}
     \label{fig:usbcameraLocker}
 \end{figure}
@@ -939,7 +939,7 @@ Het idee van een chatbot werd het eerst gepubliceerd in 1950 \autocite{Turing200
 \begin{figure}[h]
     \centering
     \includegraphics{F17_grafiekChatbotSearches.png}
-    \captionsetup{justification=ce/brntering, singlelinecheck=false}    
+    \captionsetup{justification=centering, singlelinecheck=false}    
     \caption{Zoek resultaten in scopus voor de termen ‘chatbot’ of ‘conversation agent’ of ‘conversational interface’ vanaf 2000 tot 2019.}
     \label{fig:graphDocusChatbotAYear}
 \end{figure}
@@ -953,7 +953,7 @@ De start van de menselijke vraag tot een gegenereerde chatbot antwoord wordt voo
 \begin{figure}[h]
     \centering
     \includegraphics{F18_chatbotArchitectuur.png}
-    \captionsetup{justification=ce/brntering, singlelinecheck=false}    
+    \captionsetup{justification=centering, singlelinecheck=false}    
     \caption{Standaard architectuur van een chatbot.}
     \label{fig:chatbotArchitectuur}
 \end{figure}
@@ -968,7 +968,7 @@ Een schematische voorstelling van de classificatie tussen soorten chatbots wordt
 \begin{figure}[h]
     \centering
     \includegraphics{F19_chatbotClassificatie.png}
-    \captionsetup{justification=ce/brntering, singlelinecheck=false}    
+    \captionsetup{justification=centering, singlelinecheck=false}   
     \caption{Classificaties en soorten van een chatbot.}
     \label{fig:chatbotTypes}
 \end{figure}
