--- a/bachproef/standvanzaken.tex
+++ b/bachproef/standvanzaken.tex
@@ -716,8 +716,8 @@ Een stabiele werking van het smart locker systeem is cruciaal aangezien hier het
 
 \begin{figure}[h]
     \centering
-    \includegraphics{F16_schemaWerking.png}
-    \captionsetup{justification=ce/brntering, singlelinecheck=false}    
+    \includegraphics[angle=90, width=\textwidth]{F16_schemaWerking.jpg}
+    \captionsetup{justification=centering}    
     \caption{Een schematische voorstelling  hoe een QR-unit operationeel te werk gaat.}
     \label{fig:schemaWerkingUnit}
 \end{figure}
