--- a/bachproef/verwerkingresultaten.tex
+++ b/bachproef/verwerkingresultaten.tex
@@ -5,4 +5,40 @@
 \chapter{Verwerking resultaten}%
 \label{ch:verwerkingresultaten}
 
+Inleiding...
+
+
+\section{Resultaten QR-code scanners}
+\label{resultatenQR-codeScanners}
+
+Resultaten
+
+\begin{table}[h]
+    \centering
+    \begin{tabular}{ |c|c| }
+        \hline
+        \multicolumn{1}{|c|}{} & \textbf{Nieuwe QR-scanner} \\       
+        \hline
+        \textbf{\textit{Gemiddelde}} & 168,635 s \\
+        \hline
+        \textbf{\textit{Mediaan}} & 176,180 s \\
+        \hline
+        \textbf{\textit{Modus}} & 177,737 s \\
+        \hline
+        \textbf{\textit{Standaardafwijking}} & 28,778 s \\
+        \hline
+        \textbf{\textit{Variantiecoëfficiënt}} & 0,018 s \\
+        \hline
+    \end{tabular}
+    \captionsetup{justification=centering}
+    \caption{De waarden in de tabel zijn uitgedrukt in seconden (s). Geef de resultaten weer van de metingen met de nieuwe scanner.}
+    \label{tab:nieuweScanner}
+\end{table}
+
+
+\section{Resultaten chatbot}
+\label{resultatenChatbot}
+
+Resultaten
+
 
